--- a/concepts/tabcandy spec.graffle/data.plist
+++ b/concepts/tabcandy spec.graffle/data.plist
@@ -160,6 +160,345 @@
 	<key>GraphicsList</key>
 	<array>
 		<dict>
+			<key>Bounds</key>
+			<string>{{2519.68, 1123}, {70.5292, 67.98}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>FontInfo</key>
+			<dict>
+				<key>Font</key>
+				<string>Helvetica</string>
+				<key>Size</key>
+				<real>10</real>
+			</dict>
+			<key>ID</key>
+			<integer>46094</integer>
+			<key>ImageID</key>
+			<integer>16</integer>
+			<key>Shape</key>
+			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>fill</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>stroke</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
+		</dict>
+		<dict>
+			<key>AllowConnections</key>
+			<string>NO</string>
+			<key>AllowLabelDrop</key>
+			<false/>
+			<key>AllowToConnect</key>
+			<false/>
+			<key>Class</key>
+			<string>LineGraphic</string>
+			<key>ID</key>
+			<integer>46093</integer>
+			<key>Points</key>
+			<array>
+				<string>{2386.48, 1221}</string>
+				<string>{2420, 1257.02}</string>
+			</array>
+			<key>Style</key>
+			<dict>
+				<key>stroke</key>
+				<dict>
+					<key>Color</key>
+					<dict>
+						<key>b</key>
+						<string>1</string>
+						<key>g</key>
+						<string>0.796079</string>
+						<key>r</key>
+						<string>0.384314</string>
+					</dict>
+					<key>HeadArrow</key>
+					<string>FilledArrow</string>
+					<key>LineType</key>
+					<integer>1</integer>
+					<key>TailArrow</key>
+					<string>0</string>
+					<key>TailScale</key>
+					<real>1.7000001668930054</real>
+					<key>Width</key>
+					<real>4</real>
+				</dict>
+			</dict>
+		</dict>
+		<dict>
+			<key>Bounds</key>
+			<string>{{2294, 1123}, {203.211, 143}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>ID</key>
+			<integer>46092</integer>
+			<key>ImageID</key>
+			<integer>19</integer>
+			<key>Shape</key>
+			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>fill</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>stroke</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
+		</dict>
+		<dict>
+			<key>Bounds</key>
+			<string>{{2570, 496.612}, {279.5, 36}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>FitText</key>
+			<string>Vertical</string>
+			<key>Flow</key>
+			<string>Resize</string>
+			<key>ID</key>
+			<integer>46091</integer>
+			<key>Magnets</key>
+			<array>
+				<string>{1, 1}</string>
+				<string>{1, -1}</string>
+				<string>{-1, -1}</string>
+				<string>{-1, 1}</string>
+				<string>{0, 1}</string>
+				<string>{0, -1}</string>
+				<string>{1, 0}</string>
+				<string>{-1, 0}</string>
+			</array>
+			<key>Shape</key>
+			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>fill</key>
+				<dict>
+					<key>Color</key>
+					<dict>
+						<key>b</key>
+						<string>0.74902</string>
+						<key>g</key>
+						<string>1</string>
+						<key>r</key>
+						<string>0.984314</string>
+					</dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>stroke</key>
+				<dict>
+					<key>Color</key>
+					<dict>
+						<key>b</key>
+						<string>0.0249909</string>
+						<key>g</key>
+						<string>0.766479</string>
+						<key>r</key>
+						<string>1</string>
+					</dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
+			<key>Text</key>
+			<dict>
+				<key>Align</key>
+				<integer>0</integer>
+				<key>Pad</key>
+				<integer>0</integer>
+				<key>Text</key>
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf540
+{\fonttbl\f0\fnil\fcharset0 DroidSans;}
+{\colortbl;\red255\green255\blue255;}
+\deftab720
+\pard\tx500\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardeftab720\li520\fi-520\slleading30\ql\qnatural
+
+\f0\b\fs24 \cf0 Finish the specification for minimum thing for shipping.!}</string>
+				<key>VerticalPad</key>
+				<integer>0</integer>
+			</dict>
+			<key>TextPlacement</key>
+			<integer>0</integer>
+			<key>VFlip</key>
+			<string>YES</string>
+		</dict>
+		<dict>
+			<key>Bounds</key>
+			<string>{{2577, 237}, {214, 19}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>FitText</key>
+			<string>YES</string>
+			<key>Flow</key>
+			<string>Resize</string>
+			<key>FontInfo</key>
+			<dict>
+				<key>Font</key>
+				<string>DroidSans</string>
+				<key>Size</key>
+				<real>14</real>
+			</dict>
+			<key>ID</key>
+			<integer>46090</integer>
+			<key>Shape</key>
+			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>fill</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>stroke</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
+			<key>Text</key>
+			<dict>
+				<key>Align</key>
+				<integer>0</integer>
+				<key>Pad</key>
+				<integer>0</integer>
+				<key>Text</key>
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf540
+{\fonttbl\f0\fnil\fcharset0 DroidSans;}
+{\colortbl;\red255\green255\blue255;}
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\ql\qnatural\pardirnatural
+
+\f0\fs28 \cf0 Metrics of Success (from Beltzner)}</string>
+				<key>VerticalPad</key>
+				<integer>0</integer>
+			</dict>
+			<key>Wrap</key>
+			<string>NO</string>
+		</dict>
+		<dict>
+			<key>Bounds</key>
+			<string>{{2570, 262.806}, {279.5, 221}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>FitText</key>
+			<string>Vertical</string>
+			<key>Flow</key>
+			<string>Resize</string>
+			<key>ID</key>
+			<integer>46089</integer>
+			<key>Magnets</key>
+			<array>
+				<string>{1, 1}</string>
+				<string>{1, -1}</string>
+				<string>{-1, -1}</string>
+				<string>{-1, 1}</string>
+				<string>{0, 1}</string>
+				<string>{0, -1}</string>
+				<string>{1, 0}</string>
+				<string>{-1, 0}</string>
+			</array>
+			<key>Shape</key>
+			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>fill</key>
+				<dict>
+					<key>Color</key>
+					<dict>
+						<key>b</key>
+						<string>0.74902</string>
+						<key>g</key>
+						<string>1</string>
+						<key>r</key>
+						<string>0.984314</string>
+					</dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>stroke</key>
+				<dict>
+					<key>Color</key>
+					<dict>
+						<key>b</key>
+						<string>0.0249909</string>
+						<key>g</key>
+						<string>0.766479</string>
+						<key>r</key>
+						<string>1</string>
+					</dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
+			<key>Text</key>
+			<dict>
+				<key>Align</key>
+				<integer>0</integer>
+				<key>Pad</key>
+				<integer>0</integer>
+				<key>Text</key>
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf540
+{\fonttbl\f0\fnil\fcharset0 DroidSans;}
+{\colortbl;\red255\green255\blue255;}
+\deftab720
+\pard\tx500\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardeftab720\li520\fi-520\slleading30\ql\qnatural
+
+\f0\b\fs24 \cf0 * Time to find a particular tab\
+* Average time spent hunting\
+* Raw switch time (back and forth)\
+* Psychometric time?\
+* User acceptance button\
+------------------------\
+Common task flows that we think people are doing with tab\
+\
+Open new/switch back and forth/actions required for these things\
+}</string>
+				<key>VerticalPad</key>
+				<integer>0</integer>
+			</dict>
+			<key>TextPlacement</key>
+			<integer>0</integer>
+			<key>VFlip</key>
+			<string>YES</string>
+		</dict>
+		<dict>
 			<key>AllowConnections</key>
 			<string>NO</string>
 			<key>AllowLabelDrop</key>
@@ -431,7 +770,7 @@ My original work got killed by HG so will have to recreate it. Coming soon.}</st
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{2294, 793}, {149.374, 192}}</string>
+			<string>{{2294, 793}, {149.374, 320}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FitText</key>
@@ -481,7 +820,9 @@ My original work got killed by HG so will have to recreate it. Coming soon.}</st
 
 \f0\fs22 \cf2 Because we are using an overlay, we are no longer constrained by keeping the size of the group from overlapping with others pages and groups. Therefore we can size the tabs at a large visually-useful minimum size.\
 \
-You can still drag pages around to re-order them inside the overlay.}</string>
+You can still drag pages around to re-order them inside the overlay.\
+\
+You can drag a page out of an overlay to put it into another group. When it crosses the boundary of the overlay, the overlay shrinks away and you can place the page anywhere you like.}</string>
 				<key>VerticalPad</key>
 				<integer>0</integer>
 			</dict>
@@ -838,7 +1179,7 @@ You can still drag pages around to re-order them inside the overlay.}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{1595, 966}, {149.374, 192}}</string>
+			<string>{{1595, 966}, {149.374, 432}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FitText</key>
@@ -888,7 +1229,12 @@ You can still drag pages around to re-order them inside the overlay.}</string>
 
 \f0\fs22 \cf2 When you scale a group down far enough, it turns into a stack. The stacks are still groups and so still namable and all that jazz.\
 \
-Clicking causes the stack to fan out in place (that is the group doesn\'92t grow in size but the the pages are arranged in an overlay over other the rest of TabCandy)}</string>
+Clicking causes the stack to fan out in place (that is the group doesn\'92t grow in size but the the pages are arranged in an overlay over other the rest of TabCandy)\
+\
+Some interaction notes:\
+* The top-left page is always the page which shows on the top of the stack.\
+* Adding a new page into a stack puts it on top (and hence in the top-left position).\
+* Each stack should have a different random rotation orderings, and that ordering should be preserved across unstacking/restacking. This gives each stack an iconic look.}</string>
 				<key>VerticalPad</key>
 				<integer>0</integer>
 			</dict>
@@ -18705,7 +19051,7 @@ An optimum space-efficient layout should be used.}</string>
 	<key>MasterSheets</key>
 	<array/>
 	<key>ModificationDate</key>
-	<string>2010-04-14 20:11:16 -0400</string>
+	<string>2010-04-23 18:00:56 -0400</string>
 	<key>Modifier</key>
 	<string>Aza Raskin</string>
 	<key>NotesVisible</key>
@@ -18731,7 +19077,7 @@ An optimum space-efficient layout should be used.}</string>
 		<key>NSPaperName</key>
 		<array>
 			<string>string</string>
-			<string>0D09B4C8-CB1B-4E6A-9B6B-974FDC4396A7</string>
+			<string>6F320386-C88B-43B8-8E1A-A279EE388774</string>
 		</array>
 		<key>NSPaperSize</key>
 		<array>
@@ -18781,7 +19127,7 @@ An optimum space-efficient layout should be used.}</string>
 			</dict>
 		</array>
 		<key>Frame</key>
-		<string>{{0, 4}, {1280, 774}}</string>
+		<string>{{110, 4}, {1280, 774}}</string>
 		<key>ListView</key>
 		<false/>
 		<key>OutlineWidth</key>
@@ -18795,7 +19141,7 @@ An optimum space-efficient layout should be used.}</string>
 		<key>SidebarWidth</key>
 		<integer>120</integer>
 		<key>VisibleRegion</key>
-		<string>{{2026, 208}, {1131, 605}}</string>
+		<string>{{2153, 1}, {1131, 605}}</string>
 		<key>Zoom</key>
 		<real>1</real>
 		<key>ZoomValues</key>
